--- a/index.html
+++ b/index.html
@@ -772,7 +772,7 @@ Don't use just one asset group. Split them by:
                 ] : m.content
             }))];
 
-            const response = await fetch("https://openrouter.ai/api/v1/chat/completions", {
+            const response = await fetch("https://performance-marketing-api.listandsouza.workers.dev", {
                 method: "POST",
                 headers: {
                     "Authorization": `Bearer ${state.settings.apiKey}`,
